<resources>
    <string name="app_name">HaioshApp</string>
    <string name="lg_enter_user_name">Enter user name</string>
    <string name="lg_enter_password">Enter password</string>
    <string name="lg_user_name">User Name</string>
    <string name="ls_password">Password</string>
    <string name="lg_log_in">Log in</string>
    <string name="lg_unregistered_you_can_click_here_to_register">Unregistered? Click here to register</string>
    <string name="rg_register">Register</string>
    <string name="hioosh_name">Hioosh</string>
    <string name="chat_chat_list">Chat list</string>
    <string name="lg_unregistered">Unregistered?</string>
    <string name="lg_click_here_to_register"><u>Click here to register</u></string>
    <string name="register_already_registered">Already registered?</string>
    <string name="register_click_here_to_log_in"><u>Click here to log in</u></string>
    <string name="register_nick_name">Nick Name</string>
    <string name="register_enter_nick_name">Enter nick name</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="new_chat_add_a_contact">Add a contact</string>
    <string name="new_chat_contact_name">Contact Name</string>
    <string name="new_chat_enter_contact_name">Enter Contact Name</string>
    <string name="new_chat_server">Server</string>
    <string name="new_chat_enter_server">Enter Server</string>
    <string name="single_chat_enter_message">Enter Message</string>
    <string name="register_upload_a_photo">Upload a photo</string>
    <string name="register_upload_image">Upload</string>
    <string name="BaseUrl">http://10.0.2.2:5034/api/</string>
    <string name="def_url_server">URL Server:</string>
    <string name="def_update_url_server">Update URL Server</string>
    <string name="lg_click_here_to_change_the_app_settings"><u>Click here to change the app settings</u></string>
</resources>