<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".NewChat">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/green"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/new_chat_contact_name"
                android:textSize="24dp"
                android:typeface="serif" />

            <EditText
                android:id="@+id/new_chat_contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@color/green_light"
                android:ems="10"
                android:hint="@string/new_chat_enter_contact_name"
                android:inputType="textPersonName"
                android:textSize="18dp"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/new_chat_nickname1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/register_nick_name"
                android:textSize="24dp"
                android:typeface="serif" />

            <EditText
                android:id="@+id/new_chat_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@color/green_light"
                android:ems="10"
                android:hint="@string/register_enter_nick_name"
                android:inputType="textPersonName"
                android:textSize="18dp"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/new_chat_server"
                android:textSize="24dp"
                android:typeface="serif" />

            <EditText
                android:id="@+id/new_chat_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@color/green_light"
                android:ems="10"
                android:hint="@string/new_chat_enter_server"
                android:inputType="textPersonName"
                android:textSize="18dp"
                android:typeface="serif" />
        </LinearLayout>

        <Button
            android:id="@+id/new_chat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/purple_3"
            android:text="@string/new_chat_add_a_contact"
            android:textSize="22dp"
            android:typeface="serif" />
        <TextView
            android:id="@+id/new_chat_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=" "
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/deep_orange_variant"
            android:typeface="serif" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>